# Memories

backend/: .env.example  .gitignore  cargo.toml  pyproject.toml  requirements.txt  run.py  start_server.py
backend/scripts/: build_rust.py  pretest.py  security_audit.py
backend/src/: main.py
backend/src/api/: dependencies.py
backend/src/api/v1/: __init__.py  audio.py  chats.py  export.py  exports.py
backend/src/chat_parser/src/: lib.rs
backend/src/core/analysis/: sentiment.py  statastics.py  statistics.py
backend/src/core/export/: archive.py  pdf.py
backend/src/core/parsing/: adapter.py  parser.rs
backend/src/models/: database.py  enums.py  schemas.py
backend/src/utils/: auth.py  date_handler.py  loggers.py  security.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_parser.py  test_sentiment.py
frontend/: .env  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/: index.html  manifest.json  sw.js
frontend/src/: .env  .env.development  .env.production  App.tsx  index.css  main.tsx  test-setup.ts  vite-env.d.ts
frontend/src/Components/: ChatView.tsx  DiaryMode.tsx  ErrorBoundary.tsx  MemoryLane.tsx  PinLock.tsx
frontend/src/Contexts/: AuthContext.tsx  ChatContext.tsx  Settings.tsx  ThemeContext.tsx
frontend/src/Routes/: routes.tsx
frontend/src/Sidebar/: Navbutton.tsx
frontend/src/Workers/: analysis.worker.ts  dataProcessor.ts  exportWorker.ts  parseWorker.ts  sentimentWorker.ts
frontend/src/api/: chat.service.ts  client.ts  config.ts  (+6 more)
(+157 files in other folders)
